--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,15 @@ version = "0.0.1"
 serde = {version = "1", default-features = false}
 thiserror = "1"
 
-ron = {version = "0.7", optional = true}
+mlua = {version = "0.8", optional = true, features = ["serialize", "serde"]}
+ron = {version = "0.8", optional = true}
 serde_gura = {version = "0.1.4", optional = true}
 serde_json = {version = "1", optional = true}
-serde_yaml = {version = "0.8", optional = true}
+serde_yaml = {version = "0.9", optional = true}
 toml = {version = "0.5", optional = true}
 
 [features]
-default = []
+default = ["lua"]
 full = [
   "json",
   "gura",
@@ -25,4 +26,5 @@ full = [
 ]
 gura = ["serde_gura"]
 json = ["serde_json"]
+lua = ["mlua"]
 yaml = ["serde_yaml"]
